respaldo-depuracion/2026-09-04-lote3-campos-objetos/objects/Workorder__c.object
<CustomObject>
    <fields>
        <fullName>Defective_Units__c</fullName>
        <label>Defective Units</label>
        <summarizedField>Work_Part__c.Defective_Units__c</summarizedField>
        <summaryForeignKey>Work_Part__c.Workorder__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Item_Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Item Program</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Item_Program__c.Item__c</field>
                <operation>equals</operation>
                <valueField>$Source.Item__c</valueField>
            </filterItems>
            <filterItems>
                <field>Item_Program__c.Workcell__c</field>
                <operation>equals</operation>
                <valueField>$Source.Workcell__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Item_Program__c</referenceTo>
        <relationshipLabel>Workorders</relationshipLabel>
        <relationshipName>Workorders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Item__c</fullName>
        <label>Item</label>
        <referenceTo>Sourcing_Item__c</referenceTo>
        <relationshipLabel>Workorders</relationshipLabel>
        <relationshipName>Workorders</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Output_Units__c</fullName>
        <formula>Production_Order__r.Output_Units__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>As found in &quot;Output Units&quot; inside &quot;Production Order&quot;</inlineHelpText>
        <label>Output Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pct_Capacity__c</fullName>
        <formula>Production_Units__c  /  Workcell__r.Capacity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>&quot;Product Units&quot; / &quot;% Capacity&quot; from &quot;Workcell&quot;</inlineHelpText>
        <label>% Capacity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Pending_Units__c</fullName>
        <description>If &quot;Production Units&quot; greater than &quot;Valid Units&quot; then &quot;Production Units&quot; - &quot;Valid Units&quot;, else 0</description>
        <formula>IF (Production_Units__c   &gt;   Valid_Units__c , Production_Units__c -   Valid_Units__c , 0 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>&quot;Production Units&quot; - &quot;Valid Units&quot;</inlineHelpText>
        <label>Pending Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Production_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Production Order</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Production_Order__c.Item__c</field>
                <operation>equals</operation>
                <valueField>$Source.Item__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Production_Order__c</referenceTo>
        <relationshipLabel>Workorders</relationshipLabel>
        <relationshipName>Workorders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Production_Unit__c</fullName>
        <formula>Workcell__r.Production_Unit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>As found in &quot;Production Unit&quot; inside &quot;Workcell&quot;</inlineHelpText>
        <label>Production Unit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Production_Units_Item__c</fullName>
        <formula>Item_Program__r.Production_Units_Item__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>As found in &quot;Production Units/Item&quot; inside &quot;Item Program&quot;</inlineHelpText>
        <label>Production Units / Item</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Production_Units__c</fullName>
        <formula>Production_Order__r.Output_Units__c  * Item_Program__r.Production_Units_Item__c  *  ( 1+ Item_Program__r.Rejection__c  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>&quot;Output Units&quot; x &quot;Production Units Item&quot; x (1 + &quot;% Rejection&quot;)</inlineHelpText>
        <label>Production Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rejection__c</fullName>
        <formula>Item_Program__r.Rejection__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>As found in &quot;% Rejection&quot; inside &quot;Item Program&quot;</inlineHelpText>
        <label>% Rejection</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Units_Produced__c</fullName>
        <label>Units Produced</label>
        <summarizedField>Work_Part__c.Units_Produced__c</summarizedField>
        <summaryForeignKey>Work_Part__c.Workorder__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Valid_Units__c</fullName>
        <label>Valid Units</label>
        <summarizedField>Work_Part__c.Valid_Units__c</summarizedField>
        <summaryForeignKey>Work_Part__c.Workorder__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Workcell__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Workcell</label>
        <referenceTo>Workcell__c</referenceTo>
        <relationshipLabel>Workorders</relationshipLabel>
        <relationshipName>Workorders</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Workorder</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>WO# {YYYY}-{000000}</displayFormat>
        <label>Workorder Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Workorders</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>